--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,17 @@
 # User-specific files
 *.rsuser
 *.suo
+
+.suo
 *.user
 *.userosscache
 *.sln.docstates
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
-
+Migrations/
+.idea/
+*.dll
 # Mono auto generated files
 mono_crash.*
 
@@ -29,7 +33,6 @@ x86/
 bld/
 [Bb]in/
 [Oo]bj/
-[Oo]ut/
 [Ll]og/
 [Ll]ogs/
 
@@ -91,6 +94,7 @@ StyleCopReport.xml
 *.tmp_proj
 *_wpftmp.csproj
 *.log
+*.tlog
 *.vspscc
 *.vssscc
 .builds
@@ -206,6 +210,9 @@ PublishScripts/
 *.nuget.props
 *.nuget.targets
 
+# Nuget personal access tokens and Credentials
+# nuget.config
+
 # Microsoft Azure Build Output
 csx/
 *.build.csdef
@@ -226,6 +233,8 @@ _pkginfo.txt
 # Visual Studio cache files
 # files ending in .cache can be ignored
 *.[Cc]ache
+*.cache
+*.editorconfig
 # but keep track of directories ending in .cache
 !?*.[Cc]ache/
 
@@ -361,3 +370,26 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# VS Code files for those working on multiple tools
+.vscode/*
+.vs/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
+
+# Windows Installer files from build outputs
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# JetBrains Rider
+.idea/
+*.sln.iml
